fix: globals.css bg-img height auto to 800px to fixed bg-img on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@ section.no-bg {
 .bg-img::before {
   content: "";
   position: fixed;
-  height: px;
+  height: 800px;
   inset: 0;
   z-index: -1;
   background-image: url('top-image.jpg');
